# temp-log-ui

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  about.toml  index.html
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
resources/: styles.css
src/: api.rs  hooks.rs  main.rs
src/api/: templog_dto.rs  templog_measurements.rs
src/components/: graph.rs
src/hooks/: load_temp.rs
