[package]
name = "temp-log-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-chart = "0.6.0"
chrono = "0.4.25"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }

# Patching yew chart until yew 0.20 is officially supported
[patch.crates-io]
yew-chart = { git = 'https://github.com/mthenn/yew-chart', branch = 'update-yew-version' }