[package]
name = "temp-log-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-chart = "0.6.0"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default-features = false }
wasm-logger = "0.2.0"
log = "0.4.19"

# Patching yew chart until yew 0.20 is officially supported
[patch.crates-io]
yew-chart = { git = 'https://github.com/mthenn/yew-chart', branch = 'update-yew-version' }
